// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image with data should render an image with alt text 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
</figure>
`;

exports[`Image with data should render an image with alt text and caption 1`] = `
.c3 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c2 {
  background-color: #d5d0cd;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  font-size: 0.9375em;
  line-height: 1.125rem;
}

.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 0.875em;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <figcaption
    className="c2"
  >
    <span
      className="c3"
    >
      Image caption, 
    </span>
  </figcaption>
</figure>
`;
